--- a/src/main/java/Lab4Paradigmas/Vista/MainGUI.form
+++ b/src/main/java/Lab4Paradigmas/Vista/MainGUI.form
@@ -1,23 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="main.java.Lab4Paradigmas.Vista.DobbleGUI">
-  <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="9" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="main.java.Lab4Paradigmas.Vista.MainGUI">
+  <grid id="27dc6" binding="panelMain" layout-manager="GridLayoutManager" row-count="10" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="20" bottom="20" right="20"/>
     <constraints>
       <xy x="20" y="20" width="500" height="652"/>
     </constraints>
     <properties>
       <background color="-1580800"/>
+      <toolTipText value=""/>
     </properties>
     <border type="none"/>
     <children>
       <vspacer id="bd306">
         <constraints>
-          <grid row="4" column="1" row-span="4" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="1" row-span="4" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
       <component id="305c6" class="javax.swing.JButton" binding="jugarButton" default-binding="true">
         <constraints>
-          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5999189"/>
@@ -48,7 +49,7 @@
       </component>
       <component id="dab6c" class="javax.swing.JButton" binding="verModosDeJuegoButton" default-binding="true">
         <constraints>
-          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="7" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5999189"/>
@@ -59,7 +60,7 @@
       </component>
       <component id="44de7" class="javax.swing.JButton" binding="cambiarModoDeJuegoButton" default-binding="true">
         <constraints>
-          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="6" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5999189"/>
@@ -70,7 +71,7 @@
       </component>
       <component id="21ceb" class="javax.swing.JButton" binding="registrarUnJugadorButton" default-binding="true">
         <constraints>
-          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="5" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5999189"/>
@@ -82,7 +83,7 @@
       </component>
       <component id="5f864" class="javax.swing.JButton" binding="crearJuegoButton" default-binding="true">
         <constraints>
-          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5999189"/>
@@ -96,7 +97,7 @@
       </component>
       <component id="243ba" class="javax.swing.JButton" binding="salirButton" default-binding="true">
         <constraints>
-          <grid row="8" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
+          <grid row="9" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties>
           <background color="-5999189"/>
@@ -115,6 +116,17 @@
           <iconTextGap value="4"/>
           <inheritsPopupMenu value="true"/>
           <text value=""/>
+        </properties>
+      </component>
+      <component id="65b44" class="javax.swing.JButton" binding="verJugadoresRegistradosButton" default-binding="true">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <background color="-5999189"/>
+          <font name="Rockwell Extra Bold" size="12" style="1"/>
+          <icon value="main/java/Lab4Paradigmas/Vista/Resources/players.png"/>
+          <text value="Ver jugadores registrados"/>
         </properties>
       </component>
     </children>
